TestSuite/PascalABCTests/errors/err0207.pas
function f<T>(n: T): integer;
begin
end;

begin
  var ttt := f; // падает!
end.